Fixed desktop dropdown visibility.

--- a/components/_patterns/02-molecules/menus/main-menu/_main-menu.scss
+++ b/components/_patterns/02-molecules/menus/main-menu/_main-menu.scss
@@ -155,7 +155,10 @@ $main-menu-dropdown-toggle-width: $space-double;
     &--with-sub {
       display: flex;
       flex-flow: row wrap;
-      overflow: hidden;
+
+      @include breakpoint($break-nav-max) {
+        overflow: hidden;
+      }
 
       @include breakpoint($break-nav) {
         flex-flow: column nowrap;
